# Sentrylens

./: .gitignore  COMMANDS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: graph.py  nodes.py  state.py
app/chunking/: factory.py  interfaces.py  parent_child.py  recursive.py  semantic.py  sentence_window.py
app/core/: config.py  di.py  logging.py  rate_limit.py  security.py
app/db/: postgres.py
app/embeddings/: interfaces.py  ollama_embeddings.py
app/guardrails/: input_validation.py  output_validation.py  pii_detector.py  pipeline.py  prompt_injection.py  repetition_detector.py  secrets_detector.py  toxicity_detector.py  url_safety.py
app/llm/: gemini_provider.py  groq_provider.py  interfaces.py  ollama_provider.py  router.py
app/mcp/: server.py
app/memory/: conversation_memory.py
app/ocr/: azure_vision_ocr.py  easy_ocr.py  factory.py  google_vision_ocr.py  interfaces.py  paddle_ocr.py  surya_ocr.py  tesseract_ocr.py
app/parsing/: factory.py  interfaces.py  llamaparse_parser.py  local_parser.py
app/repositories/: document_repository.py
app/reranker/: cross_encoder_reranker.py  interfaces.py
app/retrieval/: bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  interfaces.py
app/routers/: auth.py  chat.py  documents.py  health.py  skills.py
app/schemas/: chat.py  common.py  documents.py
configs/: base.yaml  development.yaml  production.yaml  staging.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: pull_ollama_models.sh
tests/: conftest.py
ui/: app.js  index.html  style.css
(+26 files in other folders)
