[project]
name = "enterprise-vision-rag"
version = "0.1.0"
description = "Modular Vision RAG platform with local-first LLM routing, hybrid retrieval and agent orchestration"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "qdrant-client>=1.10.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.12.0",
    "markdown-it-py>=3.0.0",
    "pytesseract>=0.3.10",
    "pillow>=10.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
vision-extra = [
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
